[tool.poetry]
name = "learn-langchain"
version = "0.1.0"
description = ""
authors = ["ziontee113 <ziontee113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.0.325"
ipykernel = "^6.26.0"
langchain-experimental = "^0.0.36"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
